修复空值赋值